# Rastros_Engine

./: .gitignore  Doxyfile  README.md
Data/Depth_speed_tests/fixed_depth_6x6/: depth_1.txt  depth_10.txt  depth_11.txt  depth_12.txt  depth_13.txt  depth_14.txt  depth_15.txt  depth_2.txt  depth_3.txt  depth_4.txt  depth_5.txt  depth_6.txt  depth_7.txt  depth_8.txt  depth_9.txt
Data/Depth_speed_tests/fixed_depth_7x7/: GvsG_d1.txt  GvsG_d10.txt  GvsG_d11.txt  GvsG_d12.txt  GvsG_d13.txt  GvsG_d14.txt  GvsG_d15.txt  GvsG_d2.txt  GvsG_d3.txt  GvsG_d4.txt  GvsG_d5.txt  GvsG_d6.txt  GvsG_d7.txt  GvsG_d8.txt  GvsG_d9.txt
Data/Depth_speed_tests/fixed_depth_8x8/: depth_1.txt  depth_10.txt  depth_11.txt  depth_12.txt  depth_13.txt  depth_14.txt  depth_15.txt  depth_2.txt  depth_3.txt  depth_4.txt  depth_5.txt  depth_6.txt  depth_7.txt  depth_8.txt  depth_9.txt
Data/Depth_speed_tests/fixed_depth_9x9/: depth_1.txt  depth_10.txt  depth_11.txt  depth_12.txt  depth_13.txt  depth_14.txt  depth_15.txt  depth_2.txt  depth_3.txt  depth_4.txt  depth_5.txt  depth_6.txt  depth_7.txt  depth_8.txt  depth_9.txt
Data/Depth_speed_tests/ids/: GvsG_d1.txt  GvsG_d10.txt  GvsG_d11.txt  GvsG_d12.txt  GvsG_d13.txt  GvsG_d14.txt  GvsG_d15.txt  GvsG_d2.txt  GvsG_d3.txt  GvsG_d4.txt  GvsG_d5.txt  GvsG_d6.txt  GvsG_d7.txt  GvsG_d8.txt  GvsG_d9.txt
Data/Depth_speed_tests/ids_depth_5x5/: depth_1.txt  depth_10.txt  depth_11.txt  depth_12.txt  depth_13.txt  depth_14.txt  depth_15.txt  depth_2.txt  depth_3.txt  depth_4.txt  depth_5.txt  depth_6.txt  depth_7.txt  depth_8.txt  depth_9.txt
Data/Depth_speed_tests/ids_depth_8x8/: depth_1.txt  depth_10.txt  depth_11.txt  depth_12.txt  depth_13.txt  depth_14.txt  depth_15.txt  depth_2.txt  depth_3.txt  depth_4.txt  depth_5.txt  depth_6.txt  depth_7.txt  depth_8.txt  depth_9.txt
Data/Depth_speed_tests/iterative_depth_no_limit/: GvsG_d1.txt  GvsG_d10.txt  GvsG_d11.txt  GvsG_d12.txt  GvsG_d13.txt  GvsG_d14.txt  GvsG_d15.txt  (+8 more)
Data/GTests/: GTests_out.txt
Data/Tournament_CvsD/: notas.txt
Data/logs_debug_exemplos/: debug_level_1.txt  debug_level_2.txt  debug_level_3.txt  debug_level_4.txt  debug_level_5.txt
PythonTools/: README.md  debugLogParser.py  gameRegParser.py  log_parse2csv3.py  time_evolution.py
Testes/results_csv/: A_results.csv  B_results.csv  C_results.csv  D_results.csv  E_results.csv  F_results.csv  G_results.csv  H_results.csv  I_results.csv  J_results.csv
Testes/summaries/: A_results_summary.csv  B_results_summary.csv  C_results_summary.csv  D_results_summary.csv  E_results_summary.csv  F_results_summary.csv  G_results_summary.csv  H_results_summary.csv  I_results_summary.csv  J_results_summary.csv
exemplos_debug/: debug_n1.txt  debug_n2.txt  debug_n3.txt  debug_n4.txt  debug_n5.txt
src/: AI.cpp  AI.hpp  Board.cpp  Board.hpp  CMakeLists.txt  GameController.cpp  GameController.hpp  Heuristic1.cpp  Heuristic1.hpp  Heuristic2.cpp  Heuristic2.hpp  HeuristicsUtils.cpp  HeuristicsUtils.hpp  LogMsgs.cpp  LogMsgs.hpp  TestController.cpp  TestController.hpp  bindings.cpp  build-wasm-prod.sh  build-wasm.sh  main.cpp
src/.../rastros/public/: game.js  game.wasm
src/tests/: test_ai.cpp  test_board.cpp  test_integration.cpp  test_minimax.cpp
(+762 files in other folders)
